- build jar with sources and javadoc for rapaio-jmh module to pass the rules for maven central repositories